--- a/src/locale/dict/en.json
+++ b/src/locale/dict/en.json
@@ -23,6 +23,10 @@
         "p6": "Cheers!",
         "p7": "- j0Shi"
     },
+    "errors": {
+        "catError": "There was an issue loading this section. Please refresh the page to try again.",
+        "ctaError": "There was an issue loading this section. Click here to try again."
+    },
     "infohub": {
         "filter": "Filter",
         "official": "Official News",
@@ -31,9 +35,6 @@
         "discussion": "Discussions",
         "news": "External News",
         "addSource": "Add Source",
-        "errors": {
-            "catError": "There was an issue loading this section. Please refresh the page to try again."
-        },
         "sourceModal": {
             "info": "Help us create the most comprehensive list of Neverwinter articles, discussions, social posts, and media by adding sources that you feel aren't included in our engine. Please include a direct link to the content, channel, or feed that you would like us to crawl. Otherwise make sure to add a detailed description of what you'd like to have included.",
             "buttons": {
