add date picker for auction data

--- a/src/locale/dict/en.json
+++ b/src/locale/dict/en.json
@@ -52,5 +52,11 @@
                 "desc": "Please enter additional info if possible"
             }
         }
+    },
+    "auction": {
+        "search": {
+            "dateStart": "Pick Start Date",
+            "dateEnd": "Pick End Date"
+        }
     }
 }
