add an unbranded version called Gond Tools

--- a/src/locale/dict/en.json
+++ b/src/locale/dict/en.json
@@ -10,7 +10,8 @@
         "repo": "Source",
         "tracker": "DevTracker",
         "infohub": "Content Hub",
-        "auction": "Auction Data"
+        "auction": "Auction Data",
+        "buy": "Buy me a coffee"
     },
     "header": {
         "subtitle": "Neverwinter's #1 independent news source and community from 2015 - 2019!"
