loading logic for infohub filter component

--- a/src/locale/dict/en.json
+++ b/src/locale/dict/en.json
@@ -22,6 +22,7 @@
     },
     "infohub": {
         "filter": "Filter",
+        "filterPlaceholder": "Add tags to filter posts",
         "official": "Official News",
         "guides": "Guides / Blogs",
         "social": "Social Feeds",
