--- a/src/locale/dict/en.json
+++ b/src/locale/dict/en.json
@@ -13,12 +13,17 @@
         "auction": "Auction Data",
         "buy": "Buy me a coffee"
     },
-    "header": {
-        "subtitle": "Neverwinter's #1 independent news source and community from 2015 - 2019!"
-    },
     "errors": {
         "catError": "There was an issue loading this section. Please refresh the page to try again.",
         "ctaError": "There was an issue loading this section. Click here to try again."
+    },
+    "routes": {
+        "titles": {
+            "support": "Support Us",
+            "devtracker": "Devtracker",
+            "infohub": "Articles and Resources",
+            "auction": "Auction Data"
+        }
     },
     "infohub": {
         "filter": "Filter",
